  * [DEV] Ajout d'une info sur les services activés/désactivés au
    lancement d'une nouvelle console
  * [DEV] Prise en charge du proxy ADSL
  * [DEV] Correction screenshot README + màj doc + maà man
  * [DEV] Correction man + ajout 0.0.0.0 dans no_proxy + changement
    intitulé de l'info et du contenu à l'ouverture d'un nouveau shell
  * [DEV] Màj autocomplete
  * [DEV] Ajout de l'info sur le proxy courant à l'ouverture d'un
    nouveau shell
  * [DEV] Corrections autour de la commande postfix
  * [DEV] Commit -- 03/01/2017 @ 13:25:52
  * [DEV] Quelques modifications... pour que ça fonctionne
  * [DEV] Correction sur env_create.sh
  * [DEV] Commit -- 03/01/2017 @ 14:20:06
  * [DEV] Correction liées aux spécificités de Ubuntu 16.04
  * [DEV] Correction du problème de USER vide au moment du useradd dans
    docker-install.sh
  * [DEV] Correction sur la valeur de USER_LOGIN pour l'install de
    docker
  * [DEV] Changement de stratégie pour obtenir user/group dans
    l'installeur de docker
  * [DEV] Correction d'un bug sur un test de comparaison de chaîne
  * [DEV] Correction de la prise en charge de la conf pour docker pour
    les versions d'Ubuntu > 14.10
  * [DEV] Ajout d'informations sur le proxy courant + ajout d'aide en
    cas d'option incorrecte
  * [DEV] Correction du problème de changement de propriétaires de /env
    et /conf
  * [DEV] Corrections bugs/manques multiples, problèmes de droits sur
    des fichiers de conf, installation de docker qui posait problème
    sous Ubuntu 16.04
  * [DEV] Commit -- 11/01/2017 @ 14:56:49
  * [DEV] Correction de bugs (lock à l'installation, affichage, proxy,
    .curlrc, etc...) / merge d'un PULL REQUEST / gitconfig : credentials
    = 8h / fonction de vérification et d'installation des dépendances
    d'inist-tools / warning ntpdate manquant si ntp sync échoue
  * [DEV] WIP gource
  * [DEV] WIP gource
  * [DEV] Gource WiP

 -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200