@@ -368,7 +368,7 @@ function inist {
     #---------------------------------------------------------------------------
     gource)
       source "/opt/inist-tools/libs/gource.rc"
-      _it_gource "$2"
+      _it_gource "$@"
     ;;
 
     #---------------------------------------------------------------------------
