@@ -479,42 +479,3 @@ function _it_std_removeConf {
     return $FALSE
   fi
 }
-
-#-------------------------------------------------------------------------------
-# Lanceur de service en background
-#-------------------------------------------------------------------------------
-function _it_service {
-  SERVICENAME="$1"
-  SERVICEACTION="$2"
-  
-  if [ -z "$SERVICENAME" ]; then
-    _it_std_consoleMessage "ERROR" "Nom du service manquant"
-    return $FALSE
-  fi
-
-  if [ -z "$SERVICEACTION" ]; then
-    _it_std_consoleMessage "ERROR" "Commande du service « $SERVICENAME » manquante"
-    return $FALSE
-  fi
-  
-  $SUDO service "$SERVICENAME" "$SERVICEACTION"
-  
-}
-
-#-------------------------------------------------------------------------------
-# Vérification du dockage du portable...
-# ...en comptant les hub USB dispo
-# ...en comptant les écrans connectés
-# /!\ Pss fiable à 100% (et il faut que xrandr soit installé)
-#-------------------------------------------------------------------------------
-#function _it_std_check_docked {
-  #USBHUBS_COUNT=$(lsusb | grep "hub" | wc -l)
-  #DISPLAY_COUNT=$(xrandr | grep " connected" | wc -l)
-  #if [ $USBHUBS_COUNT -eq 4 ] && [ $DISPLAY_COUNT -gt 1 ]; then
-    #IS_DOCKED=0
-    #return 0
-  #else
-    #IS_DOCKED=1
-    #return 1
-  #fi
-#}
