@@ -222,5 +222,6 @@ inist-tools (0.9.11RC) RC; urgency=medium
   * [DEV] WIP gource
   * [DEV] WIP gource
   * [DEV] Gource WiP
+  * [DEV] Intégration de gource
 
  -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200
